@@ -361,6 +361,27 @@ user> (endpoint/count-messages queue)
 0
 ````
 
+## Provided Endpoint Implementations
+
+### IronMQ
+
+You must specify an IronMQ project ID, OAuth2 token, and server
+hostname to use. This can be done by creating an ~/.iron.json file, by
+providing arguments to (ironmq-transport), or by setting the
+environment variables expected by the IronMQ library before running
+your Clojure process. The config file and env variables are described
+in detail at [http://dev.iron.io/worker/reference/configuration/](IronIO's website).
+
+I find it most convenient to use ~/.iron.json for development and
+environment variables for production. These both avoid having
+credentials in your source code, and env variables map nicely into 12 factor app harnesses.
+
+The relevant env variables are:
+
+  * `IRON_PROJECT_ID` - set to the project ID from your IronMQ account.
+  * `IRON_TOKEN` - set to your IronMQ secret access token.
+
+
 ## Security
 Security is handled at the transport layer, and not by Bureaucrat. Any
 message that gets into an incoming message queue will be processed by
@@ -387,8 +408,7 @@ requires.
 
 ````
   :jvm-opts ["-d64" "-Duser.timezone=GMT" "-server" "-Djava.awt.headless=true" "-Dfile.encoding=utf-8"
-             "-Xmx512m" "-Xms512m" 
-             "-XX:+UseConcMarkSweepGC" "-XX:+CMSIncrementalMode"
+             "-Xmx512m" "-Xms512m" "-XX:+UseG1GC"]
 ```
 
 ## Roadmap
